# digital-ocean-serverless-template

./: .gitattributes  .gitignore  README.md  project.yml  pyproject.toml
.do/: deploy.template.yaml
.nimbella/: versions.json
